# rustollens

./: Cargo.toml  README.md
src/: boolean.rs  connective.rs  equality.rs  lib.rs  private.rs
tests/: boolean_test.rs  common.rs  connective_test.rs  equality_test.rs
